fixed the links

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1><strong>Odin Recipes</strong></h1>
-    <ul><a href="recipes/Lasagna.html"> Lasagna </a></ul>
-    <ul><a href="recipes/Pizza.html"> Pizza </a></ul> 
+    <ul><a href="recipes/lasagna.html"> Lasagna </a></ul>
+    <ul><a href="recipes/pizza.html"> Pizza </a></ul> 
     <ul><a href="recipes/Burger.html"> Burger </a></ul>
 </body>
 </html>
